Revision history for Catmandu-Store-CouchDB

0.0101  2013-05-23
  - update contributors
  - this Changes file

0.01    2013-05-23
  - initial release
