@@ -1,0 +1,31 @@
+# NAME
+
+WWW::ORCID - Module to interface with the ORCID webservice
+
+# DESCRIPTION
+
+Module to interface with the ORCID webservice.
+
+# VERSION
+
+Version 0.0101
+
+# SEE ALSO
+
+[http://orcid.org](http://orcid.org)
+
+# AUTHOR
+
+Patrick Hochstenbach `<patrick.hochstenbach at ugent.be>`
+
+Nicolas Steenlant, `<nicolas.steenlant at ugent.be>`
+
+Simeon Warner `<simeon.warner at cornell.edu>`
+
+# LICENSE AND COPYRIGHT
+
+This program is free software; you can redistribute it and/or modify it
+under the terms of either: the GNU General Public License as published
+by the Free Software Foundation; or the Artistic License.
+
+See http://dev.perl.org/licenses/ for more information.
