@@ -1,0 +1,11 @@
+requires 'perl', 'v5.10.1';
+
+requires 'JSON', '2.51';
+requires 'LWP::UserAgent', 0;
+requires 'Moo', '1.000008';
+requires 'namespace::clean', '0.24';
+requires 'URI', 0;
+requires 'XML::Writer', 0;
+
+recommends 'JSON::XS', '2.3';
+
