@@ -1,5 +1,9 @@
 Revision history for Catmandu-Store-CouchDB
 
+{{$NEXT}}
+  - switch to Dist::Milla
+  - update default sandbox uri
+
 0.0101  2013-05-23
   - update contributors
   - this Changes file
